--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,29 +1,70 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Build and publish graphhopper image
 
 on:
   schedule:
-     - cron: 0 1 * * *
-
-  # Allows you to run this workflow manually from the Actions tab
+    - cron: '0 1 * * *'
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+permissions:
+  contents: read
+  packages: write
+
 jobs:
-  # This workflow contains a single job called "build"
   build-and-publish:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    env:
+      GHCR_OWNER: ${{ github.repository_owner }}
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        env:
-          DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-        run: sh ./.github/build-and-upload.sh
+      - name: Clone GraphHopper
+        run: git clone --quiet https://github.com/graphhopper/graphhopper.git
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to ghcr.io
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push image (latest)
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ghcr.io/${{ env.GHCR_OWNER }}/graphhopper:latest
+
+      - name: Get latest GraphHopper tag
+        id: get_tag
+        run: |
+          TAG=$(git -C graphhopper for-each-ref --sort=creatordate refs/tags | sed -n '$s/.*\///p')
+          echo "tag=$TAG" >> $GITHUB_OUTPUT
+
+      - name: Check if tag already published
+        id: check_tag
+        run: |
+          if [ -z "${{ steps.get_tag.outputs.tag }}" ]; then
+            echo "exists=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          if docker manifest inspect ghcr.io/${{ env.GHCR_OWNER }}/graphhopper:${{ steps.get_tag.outputs.tag }} >/dev/null 2>&1; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Build and push image (tag)
+        if: steps.get_tag.outputs.tag != '' && steps.check_tag.outputs.exists == 'false'
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ghcr.io/${{ env.GHCR_OWNER }}/graphhopper:${{ steps.get_tag.outputs.tag }}
